2005-01-24  Francois Felix Ingrand  <felix@laas.fr>

	* config.h.in: protect the LITTLE_ENDIAN define which can be
	sometimes already defined.

2005-01-21  Francois Felix Ingrand  <felix@ingrand.net>

	* README: Fixed a typo.

2005-01-06  Francois Felix Ingrand  <felix@laas.fr>

	* ev-function.c: Add a make_atom_ef evaluable function.

2005-01-04  Francois Felix Ingrand  <felix@laas.fr>

	* macro.h: INLINE definition now in config.h

	* Makefile.in: Fixed a small bug in the install (link) of .ad files.
	Remove the InfoPath setting in .ad files...

2005-01-03  Francois Felix Ingrand  <felix@laas.fr>

	* ac_readline.m4: Try a new readline macro.

2004-12-22  Francois Felix Ingrand  <felix@laas.fr>

	* oprs-parser.y: Removed redondant declaration

2004-12-15  Francois Felix Ingrand  <felix@ingrand.net>

	* config.h: Remove config.h.in only use config-ac.h

2004-12-03  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-cat.c (main): remove the call to setpgrp() ... not even
	sure why we need this...

	* database.c: hash_a_term remove this compilation flag for HP
	system... CANNOT_CAST_DOUBLE_IN_INT... I am not sure it is
	"meaningfull"... 

2004-12-02  Francois Felix Ingrand  <felix@ingrand.net>

	* configure.ac: Trying to use autoconf...

2004-10-07  Francois Felix Ingrand  <felix@ingrand.net>

	* opt-parser.y: This file should be removed...

	* ope-parser.y, oprs-parser.y: Remove redundant declaration of
	expr and list_expr in this file... More resent version of bison
	seems to be mor touchy about this...

2004-05-27  Francois Felix Ingrand  <felix@laas.fr>

	* version.c: 1.0 Beta PatchLevel 1. I think, I fixed Robert
	Goldman problem... I am also putting HAS_READLINE in the sparc and
	linux config. Now that we are in BSD like licence, this should not
	be an issue.

	* oprs-server-main.c: filename_completion_function becomes
	rl_filename_completion_function... 

	* Makefile.dev: a missing dependancy for oprs-server-parser.l
