@@ -1,0 +1,3 @@
+m4_include(ac_find_motif.m4)
+m4_include(ac_readline.m4)
+m4_include(ac_laas_mkdep.m4)
